Save/Update files [ci skip]

--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -17,7 +17,7 @@
  estate_vaisyas:0 "ヴァイシャ"
  estate_vaisyas_desc:0 "ヴェーダの聖典において、ヴァイシャというカーストは比較的低い地位の人夫や農場主である。彼らはそれ以来、よりいっそう儲かる専門職に分かれていった。商人や職人、金融業者であり、彼らはインドの商業の活力の源泉である。"
  estate_rajput:0 "ラージプート"
- estate_rajput_desc:0 "ラージプートは、高潔な戦士と高慢な貴族からなる古代のカーストである。ラージャスターンの起伏の多い土地が彼らの勢力基盤である一方で、ラージプートの貴族は北インドを通して形成され、多くの偉大なラジャスはラージプートの血統であると主張する。"
+ estate_rajput_desc:0 "ラージプートは、名誉ある戦士と高潔な貴族からなる古代のカーストである。ラージャスターンの起伏の多い土地が彼らの勢力基盤である一方で、ラージプートの貴族は北インド全域に存在し、多くの偉大なラジャスはラージプートの血統であると主張している。"
  estate_brahmins_desc:0 "バラモンは、ヒンドゥー教の司祭カーストである。バラモンでない人のほとんどがサンスクリット語の読み書き能力の教育を受けていないので、バラモンは儀式と聖典の管理者である。彼らは、ヒンドゥー教徒からもそうでない人からも大いに尊敬を集め、時として政府において役割を担う。"
  EST_VAL_PROMOTED_MARATHI_CULTURE:0 "マラーター文化の登用: §Y$VAL$%§!"
  EST_VAL_PROMOTED_RAJASTHANI_CULTURE:0 "ラージャスターン文化の登用: §Y$VAL$%§!"
@@ -101,7 +101,7 @@
  bah_mission_events.3.d:0 "デリーは多くの意味で、疑いなく北インドの中心であり、そのことは多くの征服者にも知られてきた。かつてこの都市を拠点とした一帝国の臣下であったバフマニー朝のスルタンたちは今や、自身を都市の征服者リストに付け加えることとなった。街に火が放たれると、バフマニー朝の兵士たちは獲物を集めて回った。宝物庫は空になり、記念碑は引き倒され、[Root.Capital.GetCapitalName]に移設された。"
  bah_mission_events.3.a:0 "南部が力を得てきている"
  mer_mission_events.1.t:0 "デリー陥落"
- mer_mission_events.1.d:0 "デリーはインドにおいて幾多のムスリム・スルタン国に首都とされてきた街であったが、一度この街がラージプート族に支配されたことがある。メーワールの軍勢がこの古の街に押し寄せてきた時に、彼らはそれが王朝の終焉を示す最も重大な出来事であると気づかねばならなかったように思えるのだが。\nそれでも、このときの略奪はこの街がティムールの軍勢の手に落ちて、宝物が略奪され記念碑が破壊された時ほどではなかった。デリーの陥落はインドの政治情勢に大きな変化を残した。だが時代は次に何が起こるのかまでは告げないだろう。"
+ mer_mission_events.1.d:0 "デリーはインドにおいて幾多のムスリム・スルタン国に首都とされてきた街であったが、一度この街がラージプートに支配されたことがある。メーワールの軍勢がこの古の街に押し寄せてきた時に、彼らはそれが王朝の終焉を示す最も重大な場所だと思ったに違いない。\nそれでも、このときの略奪はこの街がティムールの軍勢の手に落ちて、宝物が略奪され記念碑が破壊された時ほどではなかった。デリーの陥落はインドの政治情勢に大きな変化を残した。だが時代は次に何が起こるのかまでは告げないだろう。"
  mer_mission_events.1.a:0 "素晴らしい…"
  STABHIT_FROM_DISASTER:0 "§R-§!$STABHIT|R$§R：§!$DISASTER|Y$からの安定"
  STABHIT_ON_DECLARE_WAR_DISASTER:0 "宣戦布告による安定：§R-§!$STABHIT|R$"
@@ -109,7 +109,7 @@
  brahmins_estate_events.1.d:0 "バラモンの財産の削減に反応し、州の敬虔なヒンドゥー教徒は我々の兵士たちからバラモンを保護するために立ち上がっている。"
  brahmins_estate_events.1.a:0 "よし。"
  brahmins_estate_events.2.t:0 "バラモンが宮廷地位への任命を要求"
- brahmins_estate_events.2.d:0 "バラモンは単なる宗教的な権威だけでなく世俗権力を求めてきた。昨今[Root.Country.GetName]で影響力が増大させ、行政の重要な役職を占めている。重要な役職に任命されたことに満足し、[Root.Monarch.GetTitle]に一連の要求を携えて謁見した。ある行政の役職はバラモンに法律で委託させること、バラモンの慣習を法廷で必須とすること、さらには高位の行政職はバラモンの家系で世襲させることまでも要求した。要求は言語道断ではあるものの、バラモンの影響力はあまりにも高く、もし断れば我々の統治能力は大きく阻害されるだろう。"
+ brahmins_estate_events.2.d:0 "バラモンは単なる宗教的な権威だけでなく世俗権力を求めてきた。昨今[Root.Country.GetName]でバラモンの影響力が増大しており、行政の重要な役職を占めている。重要な役職に任命されたことに満足し、[Root.Monarch.GetTitle]に一連の要求を携えて謁見した。ある行政の役職をバラモンへと法律で委託させること、バラモンの慣習を法廷で必須とすること、さらには高位の行政職はバラモンの家系で世襲させることまでも要求した。要求は言語道断ではあるものの、バラモンの影響力はあまりにも高く、もし断れば我々の統治能力は大きく阻害されるだろう。"
  brahmins_estate_events.2.a:0 "彼らの権威を受け入れよう。"
  brahmins_estate_events.6.b:0 "世俗的な権力に対する要求や縮小を拒否する。"
  EST_VAL_ACCEPTED_BRAHMIN_AUTHORITY:0 "宮廷に居座るバラモン: §Y$VAL$%§!"
@@ -125,7 +125,7 @@
  EST_VAL_BRAHMIN_ADVANCE:0 "バラモンの伸長: §Y$VAL$%§!"
  EST_VAL_BRAHMIN_DECLINE:0 "バラモンの衰退: §Y$VAL$%§!"
  brahmins_estate_events.5.t:0 "バラモンの権力の減少"
- brahmins_estate_events.5.d:0 "他のどのカーストよりも、バラモンの影響力は、忠実なヒンドゥー教徒の支持に依存している。正確な原因の特定は困難なのだが、彼らはヴェーダの教義の管理者としてはあまり見られなくなっていき、金持ちで堕落した陰謀の製作者として見られるようになっていった。政治的操作が不十分で、さらに[Root.Monarch.GetTitle]の目には好印象に写っていないのと相まって、バラモンは権力も影響力も両方とも失いつつある。"
+ brahmins_estate_events.5.d:0 "他のどのカーストよりも、バラモンの影響力は、忠実なヒンドゥー教徒の支持に依存している。正確な原因の特定は困難なのだが、彼らはヴェーダの教義の管理者としてはあまり見られなくなっていき、金持ちで堕落した陰謀者として見られるようになっていった。政治的操作が不十分で、さらに[Root.Monarch.GetTitle]の目には好印象に写っていないのと相まって、バラモンは権力も影響力も両方とも失いつつある。"
  brahmins_estate_events.5.a:0 "よし。"
  brahmins_estate_events.6.t:0 "バラモンによる大衆反乱の扇動"
  brahmins_estate_events.6.d:0 "バラモン・カーストと国家の関係は限界点にまで達した。プジャリは儀礼中に公然と[Root.Monarch.GetName]を糾弾し、バラモンの一族は我がヒンドゥー教の従属国の支配下で協力することを拒否している。最近の[Root.Monarch.GetTitle]側の宗教的な無礼は、単なる暴動を完全なる反乱へと傾けた。バラモンは、人々が我が支配に歯向かうよう煽り立てている！"
@@ -187,7 +187,7 @@
  EST_VAL_VAISYAS_ADVANCE:0 "ヴァイシャ・カーストの伸長: §Y$VAL$%§!"
  EST_VAL_VAISYAS_DECLINE:0 "ヴァイシャ・カーストの拒否: §Y$VAL$%§!"
  vaisyas_estate_events.7.t:0 "ヴァイシャ・カーストの状態"
- vaisyas_estate_events.7.d:0 "カーストの境界は、儀式の場で最も明白に感じたり、見たりします。バラモンが儀式の中心舞台に立つと、宗教的階層の指導者としての地位は、出席している全員に明らかになります。戦士と王子であるクシャトリヤは権力と地位の独自の表示を行います。\n\nしばしば交易商や職人であるヴァイシャが見落とされます。ヴァイシャの組合の代表者は彼らの地位を向上させるため、十分に尊敬されているカーストの一員に、特定の儀式の際に、カゴに乗りホラ貝を吹く権利が許されるよう要求しています。彼らの要求を受け入れる事は、厳格なバラモンを混乱させるでしょうが、ヴァイシャの好意が得られるでしょう。"
+ vaisyas_estate_events.7.d:0 "カーストの境界は、儀式の場で最も明白に感じられたり、見られたりします。バラモンが儀式の中心舞台に立つと、宗教的階層の指導者としての地位は、出席している全員に明らかになります。戦士と王子であるクシャトリヤは権力と地位を自ら誇示します。\n\n見落とされがちなのは、交易商や職人であるヴァイシャです。ヴァイシャの組合の代表者は彼らの地位を向上させるため、十分に尊敬されているカーストの一員に、特定の儀式の際に、カゴに乗りホラ貝を吹く権利が許されるよう要求しています。彼らの要求を受け入れる事は、厳格なバラモンを混乱させるでしょうが、ヴァイシャの好意が得られるでしょう。"
  vaisyas_estate_events.7.a:0 "ヴァイシャの社会的地位の向上に努めよ"
  vaisyas_estate_events.7.b:0 "低いカーストは立場をわきまえるべきだ。"
  EST_VAL_VAISHYA_MOBILITY:0 "寛大なカースト制約: §Y$VAL$%§!"
@@ -195,7 +195,7 @@
  EST_VAL_CASTE_DISCRIMINATION:0 "強制的なカースト制約: §Y$VAL$%§!"
  EST_VAL_CASTE_DISCRIMINATION_BRAHMINS:0 "強制的なカースト制約: §Y$VAL$%§!"
  vaisyas_estate_events.8.t:0 "贅沢品の売買"
- vaisyas_estate_events.8.d:0 "[Root.Country.GetName]は香辛料や貴重な宝石、良質の絹などの高価な商品の交易で有名になりました。商人は我々が豊富に生産している交易品を購入するため、はるかかなたの土地からやって来ていますが、それらは異国らしい贅沢品です。\n\nこれら産業での成功の鍵は、ヴァイシャ階級から会員を引き込む様々な組合の後援です。今までの所、我々の投資は収益性が高い事が立証されていて、さらなる投資が今後もさらに豊かに利益のみ出し続けるだろう、という事は理にかなっています。どの贅沢品の産業が[Root.Country.GetName]にとって最も重要であるかを判断し、関連する組合の発展に注力すべきです。"
+ vaisyas_estate_events.8.d:0 "[Root.Country.GetName]は香辛料や貴重な宝石、良質の絹などの高価な商品の交易で有名になりました。商人は我々が豊富に生産している交易品を購入するため、はるかかなたの土地からやって来ていますが、それらは異国らしい贅沢品です。\n\nこれら産業での成功の鍵は、ヴァイシャ階級から会員を引き込む様々な組合の後援です。今までの所、我々の投資は収益性が高い事が立証されていて、さらなる投資が今後もさらに豊かに利益をうみ出し続けるだろう、という事は理にかなっています。どの贅沢品の産業が[Root.Country.GetName]にとって最も重要であるかを判断し、関連する組合の発展に注力すべきです。"
  vaisyas_estate_events.8.a:0 "ダイヤモンドは永遠だ。"
  vaisyas_estate_events.8.b:0 "香辛料は国家の生命線だ。"
  vaisyas_estate_events.8.c:0 "絹はいつでも有益だ。"
@@ -222,7 +222,7 @@
  rajputs_estate_events.2.t:0 "ラージプートの権力促進"
  rajputs_estate_events.2.d:0 "ラージプートが[Root.Country.GetName]内で影響力を増しているように見えます。広い人脈を持つ貴族の陰謀や血縁の強い一体感、不屈の兵士としての高まる評判は、彼らの権力強化に貢献しています。ラージプートが近い将来[Root.GetAdjective]の出来事に大きな役割を果たすことが期待できます。"
  rajputs_estate_events.3.t:0 "ラージプートの権力の減少"
- rajputs_estate_events.3.d:0 "血縁集団の反目によりもたらされた一連の内紛は、[Root.Country.GetName]内でのラージプートの影響力を弱めました。[Root.GetAdjective]の政治的または軍事的な問題に全力を尽くすことができない、またはそうしたくない場合、王室での彼らの影響力に非常に苦しめられます。"
+ rajputs_estate_events.3.d:0 "血縁集団の反目によりもたらされた一連の内紛は、[Root.Country.GetName]内でのラージプートの影響力を弱めました。[Root.GetAdjective]の政治的または軍事的な問題に全力を尽くすことができない、または全力を尽くす気がないため、宮廷での彼らの影響力に非常に苦しめられています。"
  rajputs_estate_events.4.t:0 "ラージプートとの婚姻同盟"
  rajputs_estate_events.4.d:0 "同族関係はラージプート一族に最も重要であり、同様に、婚姻同盟を築くよりも彼らの忠誠を強固にする良い方法はありません。最も影響力のあるラージプートのタークルの何人かは、彼らの先祖の土地と称号を保持し続けるという保証と引き換えに、彼らの娘を我々の家系と結婚させることを提案しました。ラージプートの指導者の中には、これが承服しかねる昇華行為だと考える者もいますが、婚姻関係を提案した者達は、王室で彼らの立場を向上させる計画を立てています。"
  rajputs_estate_events.4.a:0 "我々を親族と思うだろう。"
@@ -240,7 +240,7 @@
  rajputs_estate_events.7.a:0 "統合を奨励する。"
  rajputs_estate_events.7.b:0 "統合を反対する。"
  rajputs_estate_events.8.t:0 "ラージプートの反乱"
- rajputs_estate_events.8.d:0 "[Root.Country.GetName]とラージプート一族との関係はそれほど悪くありません。ラージプート貴族の排斥とラージプート兵の軽視は、今や暴力的紛争に勃発する恐れのある憤りと不信の空気を作り出しました。[Root.Monarch.GetTitle]によって、ラージプート一族の指導者を正式に任命することは伝統的なものとなっていますが、現在の危機状態において、望ましい候補者は彼の自称臣民達によって満場一致で拒否されました。[Root.Country.GetName]のラージプートは現在、独自の指導者を任命し、彼らが管理している州を自治する権利を要求しています。王朝の政治に言葉を飲むことを維持することを強く主張するならば、彼らに選ばれた指導者が強制的に就任する覚悟をさせましょう。"
+ rajputs_estate_events.8.d:0 "[Root.Country.GetName]とラージプート一族との関係はそれほど悪くありません。ラージプート貴族の排斥とラージプート兵の軽視は、今や暴力的紛争に勃発する恐れのある憤りと不信の空気を作り出しました。[Root.Monarch.GetTitle]によって、ラージプート一族の指導者を正式に任命することは伝統的なものとなっていますが、現在の危機状態において、望ましい候補者は彼の自称臣民達によって満場一致で拒否されました。[Root.Country.GetName]のラージプートは現在、独自の指導者を任命し、彼らが管理している州を自治する権利を要求しています。もし王朝政治の息の根を止めることを強く主張するならば、彼らには自らが選んだ指導者を力づくで就任させる用意があります。"
  rajputs_estate_events.8.a:0 "我々は、紛争を避けなければならない。自治権を与えよう。"
  rajputs_estate_events.8.b:0 "我々の支配を受け入れるよう彼らに強制する。"
  rajputs_estate_events.9.t:0 "ラージプート・ダルマ"
@@ -271,7 +271,7 @@
  EST_VAL_RAJPUTS_CURTAILED:0 "宮廷におけるラージプートの抑制: §Y$VAL$%§!"
  EST_VAL_RAJPUT_CONCESSIONS:0 "ラージプート貴族へ与えられた譲歩: §Y$VAL$%§!"
  jains_estate_events.1.t:0 "[Root.GetName]におけるジャイナ教徒たちの反乱"
- jains_estate_events.1.d:0 "彼らの平和主義の道義にもかかわらず、[Root.GetName]州の現地ジャイナ教の住民は、彼らの特権の取消しの為、武器を取って我々に対して戦い始めました！"
+ jains_estate_events.1.d:0 "彼らの平和主義の道義にもかかわらず、[Root.GetName]州の現地ジャイナ教の住民は、彼らの特権が取り消されたため、武器を取って我々に対して戦い始めました！"
  jains_estate_events.1.a:0 "よし。"
  EST_VAL_JAINS_ADVANCE:0 "ジャイナ教共同体の伸長: §Y$VAL$%§!"
  EST_VAL_JAINS_DECLINE:0 "ジャイナ教共同体の衰退: §Y$VAL$%§!"
@@ -349,7 +349,7 @@
  marathas_estate_events.6.c:0 "作物を育てる為、土地を持たない農民を迎え入れよ。"
  EST_VAL_STOPPED_MILITARIZING_MARATHA:0 "農地の非武装化: §Y$VAL$%§!"
  marathas_estate_events.7.t:0 "マラーターの高級品志向の発現"
- marathas_estate_events.7.d:0 "インドでの[Root.Country.GetName]の軍事計画は、我が軍隊を率いることを任せたマラーターに栄光をもたらしました。これら兵士の多くは、ペルシア文化の贅沢品を好むという新発見をして帰国しています。ベンガルの絹、ペルシア風の絵画、真鍮や銀の精巧な作品が現在需要が高まっています。マラーターは[Root.Country.GetName]に大きな影響力を及ぼしているので、マラーター貴族は、これらの芸術の国家後援や異国情緒あふれる商品の調達を求め、[Root.Monarch.GetTitle]に申し入れました。"
+ marathas_estate_events.7.d:0 "インドでの[Root.Country.GetName]の軍事計画は、我が軍隊を率いることを任せたマラーターに栄光をもたらしました。これら兵士の多くは、ペルシア文化の贅を新たに味わって帰国しています。ベンガルの絹、ペルシア風の絵画、真鍮や銀の精巧な作品が現在需要が高まっています。マラーターは[Root.Country.GetName]に大きな影響力を及ぼしているので、マラーター貴族は、これらの芸術の国家後援や異国情緒あふれる商品の調達を求め、[Root.Monarch.GetTitle]に申し入れました。"
  marathas_estate_events.7.a:0 "ちょっとした文化のことで傷つく奴なんていないさ。"
  marathas_estate_events.7.b:0 "ペルシアの退廃文化には投資しない。"
  EST_VAL_MARATHA_LUXURIES:0 "高級品志向: §Y$VAL$%§!"
@@ -375,7 +375,7 @@
  EST_VAL_MARATHAS_EXTORTED_RIGHTS:0 "マラーターの行動の自由: §Y$VAL$%§!"
  EST_VAL_MARATHAS_DENIED_RIGHTS:0 "拒否されたマラーターの要求: §Y$VAL$%§!"
  mug_mission_events.1.t:0 "デカンの副王？"
- mug_mission_events.1.d:0 "デカンは巨大地方であり、その管理は多くの面で我々を妨げます。広大な南インドを効率的に支配する最善の方法は、ダウラターバードの古い要塞に我々の大宮殿を移転させることであると主張する者もいます。\n別の者達は、より簡単な解決法を提案しています。その全地方を我々の為に統治する総督を任命すれば、それは我々を解放し、他の場所へ拡大することができます。"
+ mug_mission_events.1.d:0 "デカンは巨大地方であり、その管理は多くの面で我々を妨げます。広大な南インドを効率的に支配する最善の方法は、ダウラターバードの古い要塞に我々の大宮殿を移転させることであると主張する者もいます。\n別の者達は、より簡単な解決法を提案しています。その全地方を統治する総督を任命し、他の場所への進出を自由にさせるというものです。"
  mug_mission_events.1.a:0 "我々は南部から帝国を支配するだろう。"
  mug_mission_events.1.b:0 "デカン副王を任命しよう。"
  mug_mission_events.1.b.tt:0 "§R非常に忠実な従属国として南インドの全ての州を解放します§!"
@@ -497,7 +497,7 @@
  INVESTMENTS_IN_COMPANY_REGION_AT_LEAST:1 "$TAG|Y$は、$REGION|Y$内の$INVESTMENT|Y$を$VAL|Y$以上有している。\n"
  local_venture:0 "地方ベンチャー"
  local_quarter:0 "局地的防郭"
- local_quarter_desc:0 "交易会社の者達は、攻囲の場合に容易に供給できる防御線を確立した。\n"
+ local_quarter_desc:0 "交易会社の者達は、攻囲の場合に容易に補給できる防御線を確立した。\n"
  permanent_quarters:0 "常設的防郭"
  permanent_quarters_desc:0 "この地域での交易会社の防衛は改善され、真に要塞化された位置を作り出した。我々の投資を守る為、交易会社の兵士の完全な守備隊が支援する。\n"
  officers_mess:0 "士官食堂"
@@ -677,13 +677,13 @@
  entrepot:0 "交易中継港"
  entrepot_desc:0 "この州は交易のための主要な集積地である。地域全体の商人がここで交易品を売買するため集まっている。"
  world_port:0 "世界的貿易港"
- world_port_desc:0 "この州は世界の主要港の一つである。地球上のすべての交易品が定期的にここを通過し、街自体が多くの王国と同じくらい有名である。"
+ world_port_desc:0 "この州は世界の主要港の一つである。地球上のすべての交易品が定期的にここを通過し、街自体が多くの王国並みに有名である。"
  emporium:0 "商業地"
  emporium_desc:0 "この州は交易においてうってつけの場所であり、現地商人たちは何世紀もここに来訪している。"
  market_town:0 "商業都市"
  market_town_desc:0 "この都市は主要な地域市場であり、地域全体の交易商が定期的に交易品の売買を求めている。"
  world_trade_center:0 "世界貿易の中心地"
- world_trade_center_desc:0 "この州は世界で最も重要な交易中心地の一つである。ここで買えない交易品はほぼなく、都市自体、多くの王国と同じくらい有名である。"
+ world_trade_center_desc:0 "この州は世界で最も重要な交易中心地の一つである。ここで買えない交易品はほぼなく、都市自体、多くの王国並みに有名である。"
  ALREADY_DOING_SETTLEMENT_GROWTH:1 "$PROVINCE$ではすでに植民者が移民成長の促進に従事しています。"
  START_SETTLEMENT_GROWTH:0 "§Y移民成長を促進する§!"
  STOP_SETTLEMENT_GROWTH:0 "§Y移民成長を取り消す§!"
@@ -703,7 +703,7 @@
  investment_events.2.b:0 "捨ておけ、我々にこの土地は必要ない。"
  investment_events.3.t:0 "アヘン貿易"
  investment_events.3.d:0 "中国との交易で利益を作り出すことは、[opium_province.TradeCompany.GetName]にとって難題です。中国はお茶や絹、磁器といった人気の交易品を生産していますが、単純な金や銀以外には、見返りに交換できるものはほぼありません。これのせいで、交易会社は貿易赤字となってしまいます。\n\nしかし、中国市場で絶対に売れる商品が一つあります。アヘンです。[opium_province.GetName]の田畑は、交易会社が麻薬を製造可能とするケシの栽培に適しています。アヘン貿易は[canton_owner.GetName]全体で禁止されていますが、それにもかかわらず交易会社は、広州へのアヘン密輸は全然難しいことではない、と考えています。そのような不正行為は確かに[canton_owner.GetAdjective]当局を苦しめますが、利益の機会を逃すことは困難です。"
- investment_events.3.a:0 "中国でのアヘン密輸"
+ investment_events.3.a:0 "中国にアヘンを密輸するのだ。"
  investment_events.3.b:0 "我々は中国を怒らせる危険を冒すことはできない。"
  investment_events.4.t:0 "腐敗した要因"
  investment_events.4.d:0 "任命された代理人が[Root.Capital.GetName]から出発するとすぐに、彼らは[corrupt_factor_province.TradeCompany.GetName]の利益となる限り、私腹を肥やし始めると予想されます。しかし、[corrupt_factor_province.GetName]の代理人である[Root.corrupt_factor_name.GetName]ほど酷く強欲な交易会社の役人は稀です。[Root.corrupt_factor_name.GetName]は私的な投資を通じて、[corrupt_factor_province.GetTradeGoodsName]の現地市場を奪いました。\n\n会社の評判を危惧する投資家は、裏切り者の代理人を[Root.Capital.GetName]へ呼び戻し、処罰を受けることを要求しています。より機に乗じた人々は、代わりに彼の事業を買収し、その事業を交易会社の事業に組み込み、彼の主導権に対して代理人に報酬を与えるべきであることを提案しています。"
@@ -787,7 +787,7 @@
  india_mission_events.4.d:0 "神聖な川ガンジスの精神的重要性を過小評価することはできません。多量の水域というだけではなく、彼女は、彼女の水を浴びる全ての人に豊かさと純潔をもたらす女神ガンガーです。\n\n栄光なるヒンドゥスターン平野の征服が完了したことで、我々はバラモンに前例にない規模の豪華な祭礼を開催するよう命令しました。ガンガーの聖水が奉納された[Root.Country.GetName]帝国は、間違いなく永遠に神々の慈悲を受けるでしょう。"
  india_mission_events.4.a:0 "我々は清められた"
  india_mission_events.5.t:0 "マラーターの台頭"
- india_mission_events.5.d:0 "マラーターの中心地の征服に続き、[Root.Country.GetName]はマラーターの強い関心が向けられています。熱心な軍事奉仕で報いとして、マラーターが特権を持ち、最重要の地位にいるようにしました。彼らの権力が大きくなり、その効力が示されたので、仮にマラーターの将軍が[Root.Country.GetName]の玉座に就く適任者でないとしたら、疑いを口に出す人が大勢います。"
+ india_mission_events.5.d:0 "マラーターの中心地の征服に続き、[Root.Country.GetName]はマラーターの強い関心が向けられています。熱心な軍事奉仕で報いとして、マラーターが特権を持ち、最重要の地位にいるようにしました。彼らの権力が大きくなり、その有効性が示されたので、マラーターの将軍の方が[Root.Country.GetName]の玉座に就く適任者ではないかと口に出して疑問視する人が大勢います。"
  india_mission_events.5.d2:0 "マラーターの中心地の征服に続き、[Root.Country.GetName]はマラーターの強い関心が向けられています。熱心な軍事奉仕への報いとして、マラーターが特権を持ち、最重要の地位にいるようにしました。我が軍事文化や軍事化政策は非常に効果的だと実証されました。"
  india_mission_events.5.b:0 "マラーターの将軍は我々を導くでしょう。"
  india_mission_events.5.c:0 "マラーターは我々の役に立つでしょう。"
