--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- desc_japan_increased_demand_of_spice:1 "自国民は香辛料の風味を知り、彼らの欲求を満たすために必要な生産量は増大している。"
- desc_japan_increased_demand_of_tea:1 "自国民は茶の風味を知り、彼らの欲求を満たすために必要な生産量は増大している。"
+ desc_japan_increased_demand_of_spice:1 "自国民は香辛料の風味を知り、彼らの需要の増加を満たすために生産量は増大している。"
+ desc_japan_increased_demand_of_tea:1 "自国民は茶の風味を知り、彼らの需要の増加を満たすために生産量は増大している。"
  desc_jap_onna_musha_modifier:1 "女武者は、戦場での槍働きを渇望している。"
  desc_mch_nurhaci_ruler_reforms_modifier:1 "偉大なる指導者ヌルハチによる一連の統治改革は、何世紀にも渡る我らが帝国の礎となるだろう"
  desc_mch_nurhaci_general_reforms_modifier:1 "偉大なる指導者ヌルハチによる一連の軍事改革は、何世紀にも渡る我らが帝国の礎となるだろう。"
@@ -9,8 +9,8 @@
  desc_mch_studied_korea_alphabet_modifier:1 "征服とは我々の生き様に近しい在り方だ。しかし、帝国を維持しようとするならば、彼を知り己の軍事・政治的目的に被征服民の知識を活用しなくてはならない。"
  desc_mch_hyang_yak_system_modifier:1 "戦闘に成功することは敵を征服するための一部でしかない。朝鮮の臣民を効率的に統治するためには、一種の契約的取り決めを行い、高い税金と引き換えにある程度の地方自治を認めねばならない。"
  desc_mch_hopae_system_modifier:1 "朝鮮王朝と同様な形で効率的な手法に学びながら、人的資源を活用しよう。"
- desc_mch_kyujanggak_modifier:1 "朝鮮の学者の研究は自身の思考運動を照らし、成長させるのに役立つだろう。"
- desc_mch_forced_integration_modifier:1 "かつての敵国が自国の習慣を採用することなく、自身の制度の中で繁栄などできない。"
+ desc_mch_kyujanggak_modifier:1 "朝鮮の学者の研究は、我々自身の思想運動を啓発し、成長させるのに役立つだろう。"
+ desc_mch_forced_integration_modifier:1 "かつての敵国が我々の習慣を採用することなく、我々の制度の中で繁栄などできない。"
  desc_qng_high_qing_era_modifier:1 "この時代、清の皇帝たちはとてつもない繁栄を謳歌し、自国の中華支配は確固たるものとなり、天の祝福を享受している。"
  desc_qng_subjugation_of_burma_modifier:1 "ビルマ、自国の南の壮大で威信高き国境であり、現在ではしっかりと自身の手中にあります！"
  desc_no_road_maintenance_modifier:1 "国内の道路は完全に荒廃している。物資の移動は著しく滞っている。"
@@ -21,7 +21,7 @@
  desc_fra_improved_court_houses_modifier:1 "地方行政の改善に向けた努力により、自国の宮廷が効率性の指標となることが可能になった。"
  desc_mng_appeased_the_eunuchs_modifier:1 "宮廷内の強力な宦官派閥は、今のところ自国の官僚の決断を承認している。"
  desc_mng_upset_eunuchs_modifier:1 "宮廷内の強力な宦官派閥は、今のところ自国の官僚の決断を承認していない。"
- desc_mng_tranquil_mil_modifier:1 "自国の軍事指揮権は、最も影響力のある宦官主導で宮殿の業務とと共に完璧に調和し共存している。"
+ desc_mng_tranquil_mil_modifier:1 "自国の軍事指揮権は、最も影響力のある宦官主導で宮殿の業務と共に完璧に調和し共存している。"
  desc_mng_palatial_disorganization_modifier:1 "宮廷は極度の混乱に苦しんでいるようだ。その結果、権力の掌握に悪影響を及ぼしている。"
  desc_mng_efficient_governance_modifier:1 "昨今の政策は、自国の統治の実施に関して、内政に好影響を与えている。"
  desc_mng_inefficient_governance_modifier:1 "昨今の政策は、自国の統治の実施に関して、内政に悪影響を与えている。"
@@ -111,14 +111,14 @@
  desc_fra_funded_reforms_of_condorcet_modifier:1 "啓蒙の時代において、芸術や科学に資金を提供することは、豊かで思慮深い社会の証である。"
  desc_fra_conquered_the_capetian_house_of_anjou_modifier:1 "アンジュー家は現在、我々の国土に適切に統合されている。彼らの主張が抑えられれば、我々の征服によって生じた緊張を和らげるのに役立つだろう。"
  desc_fra_resurgence_of_crusader_fervor_modifier:1 "再び、十字軍の復活を告げる鐘が鳴り響く！"
- desc_fra_italian_wars_modifier:1 "イタリアを巻き込んでいる不安定な状況は、私たちにとって、彼らの土地を私たちの領土に統合する絶好の機会である。"
+ desc_fra_italian_wars_modifier:1 "イタリアを巻き込んでいる不安定な状況は、彼らの土地を我々の領土に統合する絶好の機会である。"
  desc_fra_sword_of_christianity_modifier:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_sword_of_christianity_modifier2:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_sword_of_christianity_modifier3:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_sword_of_christianity_modifier4:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_sword_of_christianity_modifier5:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_support_of_the_french_crown_modifier:1 "フランス王室の支援を享受している。"
- desc_fra_provincial_road_system:1 "伝達や交通の改善、商業取引の交流を目的とした、道路や交通網の複雑な仕組み。"
+ desc_fra_provincial_road_system:1 "道路や交通網の複雑な仕組みは、伝達や交通の改善、商業取引の交流を目的としている。"
  desc_fra_developing_urban_center_modifier:1 "都市部、人口が密集した中心部は、我が大国を結びつける生命線である。"
  desc_fra_trade_fair_prosperity_modifier:1 "国内中に広がる繁栄は、自国全土で開催される数多くの見本市に端を発しており、下層階級の繁栄にも好影響を及ぼしている。"
  desc_fra_french_dockyard_industry_modifier:1 "フランスの造船所と造船産業は、自国の海事拡張計画を支える主力となるだろう。"
@@ -279,7 +279,7 @@
  desc_civic_republicanism_focus_leaders:1 "士官学校の問題に市民として焦点を当てることで、より高い有能指揮官雇用の能力が得られる。"
  desc_civic_republicanism_focus_quality:1 "軍事の問題に市民として焦点を当てることで、より高い士気と能力をもつ堅固な軍隊の能力が得られる。"
  desc_civic_republicanism_focus_naval:1 "海軍の問題に市民として焦点を当てることで、より高い容量と能力をもつ堅固な海軍の能力が得られる。"
- desc_eased_war_contributions:1 "退廃の結果、国民が期待する戦争貢献度は著しく減少した。"
+ desc_eased_war_contributions:1 "我々の退廃の結果、国民が期待する戦争貢献は著しく減少した。"
  desc_removed_estates_from_power:1 "階級から有力者が何人か追放されたことで、忠誠心だけでなく影響力も失われている。"
  desc_overhauling_the_court:1 "宮廷の大改修は、威信を高めるために宮殿費用を増やすことになるかもしれない。"
  desc_tur_city_of_faiths:1 "[This.GetName]は多くの宗教にとって偉大な聖地である。数少ない場所の一つとして、[This.GetName]への巡礼を望むあらゆる信仰に門が開かれている。"
@@ -464,7 +464,7 @@
  desc_efficient_war_taxes_act:1 "自国の農民や労働者階級が税金に関して「もういらない！」と言えば、我々が耳にするのは「いや、もっとだ！」である。この戦術を採用することで自国の国庫にさらに多くの額面を引き出すことができるだけでなく、より多くのコンドッティエーリ契約に資金供給できる、ウィンウィンだ！"
  desc_peace_keeping_force_act:1 "国家の安定を確保し、起こりうるすべての反乱分子を平和的に鎮圧することは、神から与えられた権利である。"
  desc_indigenous_development_act:1 "道路網の建設は、我々が暮らす社会に利益をもたらす。"
- desc_mercenary_registration_act:1 "傭兵への遅滞なき給与支払いや補給護送のために書いて残すという考えは、確かに経費削減につながるかもしれない。"
+ desc_mercenary_registration_act:1 "傭兵への遅滞なき給与支払いや補給護送団のために書いて残すという考えは、確かに経費削減につながるかもしれない。"
  desc_innovative_payment_techniques_act:1 "同じ傭兵を雇うにしても、単純に給料を安くしたらどうだろう？まさに革新的なアイデアだ！"
  desc_plutocratic_ethos_act:1 "我々の共和国は、強固な倫理観や縁故主義や裏取引の完全排除という基盤の上に成り立っている。"
  desc_clan_unity_act:1 "自国の偉大な部族は、自国の力と豪華な宮廷を効率的に使用することで、時の試練に生き残り、より脅威とみなされなくなるだろう。"
@@ -521,4 +521,4 @@
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_3:0 ""
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_4:0 ""
  rnw_modifier_weights:0 ""
- desc_papal_puppetmaster_personality:1 "この支配者は、教皇の座において舞台裏で絶大な影響力を持っている。"
+ desc_papal_puppetmaster_personality:1 "この支配者は、教皇の座の舞台裏で絶大な影響力を持っている。"
