--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -387,7 +387,7 @@
  desc_encomienda_system:0 "エンコミエンダ制度は、各入植者に対し、教育し保護する一定数の原住民を与え、その代わりに、原住民が入植者に一定期間の労働力を提供するものであった。"
  ideagroups.1207.t:0 "エンコミエンダ制を奨励"
  ideagroups.1207.d:0 "原住民の人々の問題は、我々にとって重要な懸案事項である。我々の世話を受けている原住民が敵対的な隣人から保護され、適切に文明化され、真の信仰を実践できるようにする必要がある。我々の入植者にこの義務を与え、それぞれが教育と保護するために多くの先住民を与えられる。これは明らかに人々が無償で行うべきものではないため、代わりとして原住民は一定期間の労働力を入植者に提供する。"
- ideagroups.1207.a:0 "それは素晴らしい開発だ！"
+ ideagroups.1207.a:0 "それは素晴らしい啓発だ！"
  ideagroups.1208.t:0 "福音の使命"
  ideagroups.1208.d:0 "信心深い者たちは良い行いをすることを望み、我々の植民地の人々の中に真の信仰を広めている。これは、より公式な宣教活動のための良い足がかりとなる。"
  ideagroups.1208.a:0 "良い知らせを広めよう"
@@ -730,8 +730,8 @@
  muslim_piety.7.d:1 "礼拝堂や高層建築を建設することは公的に禁止されているにもかかわらず、我が国のいくつかの州のズィンミーは公然と法律に反しており、カーディーの多くは対応が甘すぎる。その理由は、有害だと見なしていないか、目をつぶる程の高額な賄賂を受け取ったかのいずれかだ。"
  muslim_piety.7.a:1 "法律をより厳格に施行するよう努める。"
  muslim_piety.7.b:1 "法律を強要しない。"
- muslim_piety.8.t:1 "正しいことを行うよう求め、邪悪を禁じる"
- muslim_piety.8.d:1 "ムスリムは、コーランで「正しいことを行うよう求め、邪悪を禁じる」ためにコミュニティの中で積極的な役割を担うよう奨励されている。ムスリム学者によって多くの解釈がなされているが、時には改革派のグループによって、より極端な見解を強引に広げることを正当化するために使われることがある。[Root.Capital.GetCapitalName]にあるカリスマ的なモスクの説教者グループは、異端的な宗教的慣習の廃止を要求し始め、スーフィーに対する民衆の反感を扇り、暴力や街中での争いにつながっている。"
+ muslim_piety.8.t:1 "勧善懲悪"
+ muslim_piety.8.d:1 "ムスリムは、コーランで「善行を指導し悪行を禁止する」ためにコミュニティ内で積極的な役割を担うよう奨励されている。ムスリム学者によって多くの解釈がなされているが、時には改革派のグループによって、より極端な見解を強引に広げることを正当化するために使われることがある。[Root.Capital.GetCapitalName]にあるカリスマ的なモスクの説教者グループは、異端的な宗教的慣習の廃止を要求し始め、スーフィーに対する民衆の反感を扇り、暴力や街中での争いにつながっている。"
  muslim_piety.8.a:1 "この動きを根絶せよ。"
  muslim_piety.8.b:1 "彼らを支援せよ。"
  muslim_piety.9.t:1 "スーフィー慣習に対する議論"
@@ -1469,7 +1469,7 @@
  EVTOPTA5097:0 "農奴制を適用しよう。"
  EVTOPTB5097:0 "こういうこともあるさ。"
  EVTNAME5098:0 "[Root.GetClergyName]たちの汚職"
- EVTDESC5098:1 "[Root.GetClergyName]は買収されないように意図さており、結局のところ、それが彼らの説教である。しかし、彼らは常に自分の教えに忠実であるとは限らないようだ。スキャンダルは彼らの主導的な人物のいくつかを巡って発生し、彼らは人々に正直な宗教的指導を与える代わりに、長期間にわたって彼ら自身を様々な危険な取引を通じ、不正に豊かなものにしていたようだ。"
+ EVTDESC5098:1 "[Root.GetClergyName]は清廉であるべきだ、というのが彼らの説教である。しかし、彼らは常に己の教えを守っているとは限らないようだ。数名の有力人物の周囲にスキャンダルが発生している。彼らは人々に誠実で精神的な導きを与える代わりに、長期間にわたって数々の不正な取引を通じ、自身を法外な金持ちにさせているようだ。"
  EVTOPTA5098:0 "教会を清めよう。"
  EVTOPTB5098:0 "罪人を罰する。"
  EVTNAME5099:0 "商人たちの分裂"
@@ -2783,7 +2783,7 @@
  EVTDESC864:1 "我々は[neighbour_country.GetAdjective]の隣人との間に共通性を見出した。[Root.Religion.GetName]信仰を共有しているという事実だ。関係は改善され、両国は今、一つとなって未来を見据えている。"
  EVTOPTA864:0 "$COUNTRY_RELIGION$信仰のために。"
  EVTNAME865:0 "影響力のある説教者"
- EVTDESC865:1 "敬虔な若い説教者は、ローマの聖父の教えに対する我々の遵守がどれほど偉大であるかを最近語った。これは我々の未来にとっては良いことだ。"
+ EVTDESC865:1 "敬虔な若い説教者は最近、ローマの聖父の教えを我々がどれほどよく遵守しているかを語った。これは我々の未来にとっては良いことだ。"
  EVTOPTA865:0 "ローマに彼を派遣する。"
  EVTOPTB865:0 "彼は良い司教になるだろう。"
  EVTNAME866:0 "陸軍技術の改善"
@@ -3521,7 +3521,7 @@
  EVTDESC710:1 "[bailiff_province.GetName]の[Root.GetLowLevelOfficialForCountry]は貪欲で残酷な人物として有名だ。地元の民衆は彼を解任することを求めて集まっている。"
  EVTOPTA710:1 "[Root.GetLowLevelOfficialForCountry]を処刑する！"
  EVTOPTB710:0 "苦情を無視する。"
- EVTNAME711:0 "聖職者が異端を説教している！"
+ EVTNAME711:0 "司祭が異端説教をしている！"
  EVTDESC711:1 "[heresy_province.GetName]の数人の司祭が、明らかに我々の真の信仰に反する異端説教をしているという噂が届いた。地元住民は彼らの教えを守っているようで、将来面倒なことになるかもしれない。"
  EVTOPTA711:1 "異端を無視する。"
  EVTOPTB711:0 "取り締まれ！"
@@ -3569,7 +3569,7 @@
  EVTOPTB723:0 "彼らにより多くの地方の権限を与える。"
  EVTOPTC723:0 "社会改革だ。"
  EVTNAME724:0 "聖職者が哲学者を異端者として非難する！"
- EVTDESC724:0 "著名な自然哲学者が、宗教的真実と矛盾する新しい主張を伝えている。聖職者は、彼を止め、処罰のために引き渡すことを要求している。いずれにせよ、これは領土内で大きな混乱を引き起こすだろう。"
+ EVTDESC724:0 "著名な自然哲学者が、宗教的真理に反する新しい主張を展開している。聖職者は彼を止めさせ、処罰のために引き渡すことを要求している。いずれにせよ、これは領土内で大きな混乱を引き起こすだろう。"
  EVTOPTA724:0 "聖職者を支援する。"
  EVTOPTB724:0 "哲学者を支援する。"
  EVTNAME725:0 "都市の成長が農奴たちを引きつける"
@@ -3693,7 +3693,7 @@
  EVTDESC840:0 "最近、海軍を支持する決断を下したことで、いくつかの将軍は退職を求めるようになった。彼らは栄光がより少なくなったと感じている。"
  EVTOPTB840A:0 "しかたがない。"
  EVTNAME842:0 "不適当な新兵"
- EVTDESC842:0 "我々は、軍隊の品質の基準を引き締める必要があると感じているため、残念ながら、多くの新兵たちの可能性については、任務にふさわしくないと宣言しなければならない。"
+ EVTDESC842:0 "我々は、軍隊の品質の基準を引き締める必要があると感じているため、残念ながら、新兵候補者の多くは、任務にふさわしくないと宣言しなければならない。"
  EVTOPTB842A:0 "我々は小麦を籾殻と選り分けなければならない。"
  EVTNAME843:1 "[Root.GetNoblesReplacementForOtherGovernments]の懸念"
  EVTDESC843:1 "我々の軍隊がますます質に重点を置くようになるにつれ、彼ら自身への忠誠が第一で国家への忠誠は二の次であるという、伝統的な軍隊が永遠に失われてしまうのではないかという懸念が生じている。幸運なことに彼らはむしろ、この新式軍が渦巻く不平不満に対して最も説得力のある反論となることを心配している…[Root.GetNoblesReplacementForOtherGovernments]は特に、彼らの地位が脅かされるのではないかと恐れている。"
@@ -3761,9 +3761,9 @@
  EVTDESC741:0 "印刷機の発明以来、広い範囲を対象としたより多くの本が出版されてきた。知識がより速く広がり、今や我々の哲学者と自然科学者の間でより多くの思想が出現しており、我々はこれによる恩恵を見ることができる。"
  EVTOPTA741:0 "良い知らせだ！"
  EVTNAME742:0 "臨時の募集政策"
- EVTDESC742:1 "我々は戦争中であり、人的資源は徐々に消えていっている。[Root.Monarch.GetTitle][Root.Monarch.GetName]、我々の偉大で有能なる支配者は軍事任務のためにもっと多くの人を募集する計画を思いついた。しかし、これは田舎で問題を引き起こす可能性がある。"
+ EVTDESC742:1 "我々は戦争中であり、人的資源は徐々に失われつつある。[Root.Monarch.GetTitle][Root.Monarch.GetName]は我々の偉大で有能なる支配者であり、軍事任務のためにもっと多くの人を募集する計画を思いついた。しかし、これは田舎で問題を引き起こす可能性がある。"
  EVTOPTA742:0 "できるだけ多く！"
- EVTOPTB742:0 "免除されている者からのみ取得しよう。"
+ EVTOPTB742:0 "免除されている者からのみ徴兵しよう。"
  EVTNAME743:0 "戦争の影響"
  EVTDESC743:0 "我が国の高い戦争疲弊は、国家におけるあらゆる種類の混乱を引き起こしている。最高位の貴族からごくありふれた農奴に至るまでの誰もが、この明らかに無意味な戦争が続いていることへの歪みを感じている。"
  EVTOPTA743:0 "我々は和平に署名しなければならない！"
@@ -4171,12 +4171,12 @@
  dynastic_events.2.d:0 "若い姫が生まれたという知らせを聞いて、人々は喜んだ。彼らは昼も夜も祝いを続けたが、あなたはまだ若い娘を新しい後継者として指名していない。"
  dynastic_events.2.a:0 "この娘を新しい世継ぎにする。"
  dynastic_events.2.b:0 "男子の世継ぎがほしい！"
- dynastic_events.3.t:0 "才能ある野心的な娘"
- dynastic_events.3.d:0 "後継者の不在は[Root.Country.GetName]の国民と顧問にとって悩みの種だ。あなたには野心的で才能ある実娘がいる。彼女はその機知と巧妙さで外交官や外国の貴族、お付きの顧問に感銘を与えている。そろそろ彼女を王位継承者として検討する時ではないだろうか？"
+ dynastic_events.3.t:0 "野心的な才女"
+ dynastic_events.3.d:0 "後継者の不在は[Root.Country.GetName]の民や顧問にとって悩みの種だ。あなたには野心的で才能ある実娘がいる。彼女はその機知と巧妙さで外交官や外国の貴族、あなたに近侍する顧問にさえ感銘を与えている。そろそろ彼女を後継者として検討する時ではないだろうか？"
  dynastic_events.3.a:0 "彼女は優れた支配者になるだろう。"
- dynastic_events.3.b:0 "私はまだ死んでいないぞ！息子を1人か2人くらいは作れる。"
+ dynastic_events.3.b:0 "余はまだ死んでおらん！息子の1人や2人作れる。"
  dynastic_events.4.t:0 "支配者の娘"
- dynastic_events.4.d:0 "古い支配者は男系の後継者を残すことなくこの世を去ったが、彼らの娘は才能のある知的な女性である。彼女が王位を主張するのに他に競争相手はほとんどおらず、それを保つために必要な才能も持ち合わせている。別の旧家のある男性も王位を要求しており、それほど強くはないが、女性よりも男性の王を見たいと考えている人々もいる。"
+ dynastic_events.4.d:0 "前支配者は男系の後継者を残すことなくこの世を去ったが、彼らの娘は才能のある知的な女性である。彼女が王位を主張するのに他に競争相手はほとんどおらず、それを保つために必要な才能も持ち合わせている。別の旧家のある男性も王位を要求しており、それほど強くはないが、女性よりも男性の王を見たいと考えている人々もいる。"
  dynastic_events.4.a:0 "旧支配者の娘を王位につける。"
  dynastic_events.4.b:0 "外国の貴族を選ぶ。"
  dynastic_events.5.t:0 "政略結婚"
