--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -3315,7 +3315,7 @@
  PROV_ADJ4389:0 "トゥレーヌ"
  PROV_ADJ4390:0 "トロヤン"
  PROV_ADJ4391:0 "ヴィヴァレ"
- PROV_ADJ4392:0 "オークセロワ"
+ PROV_ADJ4392:0 "オーセロワ"
  PROV_ADJ113:1 "フェラーラ"
  PROV_ADJ527:1 "ブルハーンプル"
  PROV_ADJ529:1 "ターナ"
