--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -77,7 +77,7 @@
  dutch_republic.21.t:0 "合意はない"
  dutch_republic.21.d:0 "スターテン・ヘネラールに一定の疑問が持たれる中で、共和国が効率的に機能するためには妥協が必要である。代議員が合意に達することができなければ、国家を統治することはできない。[Root.GetName]が圧制により一元的に支配されないようにするための我々の努力は成功している。しかし、これはまた、合意が権威よりむしろ政治工作によって整理されなければならないことを意味している。時に、それは全く整理できないものとなる。"
  dutch_republic.22.t:0 "将軍は支配権を要求"
- dutch_republic.22.d:0 "時代を通じて、戦争はしばしば、多くの支配が少数の支配へと道を譲った時代でもあった。これを知っているため、我が国が戦闘へと向かうにもかかわらず、我々は軍隊に対する権限においてあまりにも多くの譲歩をすることには消極的である。\n\nこれまでのところ、成功したことで重要な役割を果たしてきた士官は、少なくとも自らの出来事への意見において、将来の行動の過程で[Root.GovernmentName]の代表と衝突している。彼の軍事上の専門知識は疑問の余地がないものだが、彼の計画に沿った強引な議会派の者たちは、[Root.GetName]の政治的地位を弱めるだろう。"
+ dutch_republic.22.d:0 "時代を通じて、戦争はしばしば、多数派支配が少数派支配に道を譲った時代でもあった。これを知っているため、我が国が戦闘へと向かうにもかかわらず、我々は軍隊に対して権限を譲歩しすぎることに消極的である。\n\nこれまでの成功に重要な役割を果たしてきた士官が、少なくとも自らの出来事への意見において、今後の行動方針について[Root.GovernmentName]の代表と衝突している。彼の軍事的な専門知識は疑問の余地がないものだが、彼の計画に沿わせるために議会派の者を強要することは、[Root.GetName]の政治的地位を弱めるだろう。"
  dutch_republic.22.a:0 "スターテン・ヘネラールは勝利を確実にするために遵守しなければならない。"
  dutch_republic.22.b:0 "我々は厄介者を前にしても、我々の理想を保持するだろう！"
  dutch_republic.23.t:0 "オラニエ派は戦争に貴族を集める"
@@ -509,7 +509,7 @@
  ideagroups.1909.d:0 "人道主義の公約は、我々の宣教師がその信仰へ非信者を勧誘することを困難にしていることを意味している。甘い飴や痛い鞭がなければ、説教者は個人的なカリスマだけに頼らざるを得ない。"
  ideagroups.1909.a:0 "最悪だ。"
  ideagroups.1910.t:0 "過去との戦い、過去の反撃"
- ideagroups.1910.d:0 "国家における市民の位置づけをより自由に捉えようとする姿勢は、近隣諸国から、王室や教会やギルドの伝統的な権利を弱体化させようとする無法国家という烙印を押されたことを意味する。我々と同じように考えている者だけを信じることはできるだろうか？"
+ ideagroups.1910.d:0 "国内における市民の位置づけをよりリベラルに理解しようとする姿勢は、近隣諸国から、王室や教会やギルドの伝統的な権利を弱体化させようとする無法国家という烙印を押されたことを意味する。我々と同じように考えている者だけを信じることはできるだろうか？"
  ideagroups.1910.a:0 "前に進もう、たとえ一人でも"
  sermons_for_princes_monarchist:0 "大公のための説教"
  desc_sermons_for_princes_monarchist:0 "[Root.Monarch.Dynasty.GetName]家は我が国教会の説教や祈祷に参加しており、民衆の評価が高まっている。"
@@ -527,8 +527,8 @@
  dutch_republic.4.t:1 "[Root.GovernmentName]と自由交易"
  dutch_republic.4.a:1 "彼らの要求は見当違いだ。彼らは[Root.GovernmentName]の臣民であり、従うべきだ。"
  dutch_republic.5.t:1 "[Root.GetName]における王"
- dutch_republic.5.da:0 "最近、[Root.GetName]でオラニエ家は支持者の増加に恵まれている。その結果、彼らの支持者はより大胆になった。教会内の人々は、古代の聖書の王たちと比較して、王家の表現でオラニエ公について語る。我々の国民は、救い主の最近の傾向は[Root.Monarch.GetName]に確かに恩恵を与えていることで、国家の主権を守り、賞賛されている彼らの役割を忘れていない。それにもかかわらず、[Root.Monarch.GetHerHim]に王の呼び名を与えることは、たとえそれが説教の文脈であっても、共和国の制度を弱体化させる危険性がある。"
- dutch_republic.5.db:0 "最近、[Root.GetName]で[Root.Monarch.Dynasty.GetName]家は支持者の増加に恵まれている。その結果、彼らの支持者はより大胆になった。教会内の人々は、古代の聖書の王たちと比較して、王家の表現で[Root.GetName]公について語る。我々の国民は、救い主の最近の傾向は[Root.Monarch.GetName]に確かに恩恵を与えていることで、国家の主権を守り、賞賛されている彼らの役割を忘れていない。それにもかかわらず、[Root.Monarch.GetHerHim]に王の呼び名を与えることは、たとえそれが説教の文脈であっても、共和国の制度を弱体化させる危険性がある。"
+ dutch_republic.5.da:0 "最近、[Root.GetName]でオラニエ家は支持者の増加に恵まれている。その結果、彼らの支持者はより大胆になった。教会内の人々は、古代の聖書の王たちになぞらえて、王家の表現でオラニエ公について語る。我々の国民は、自国の主権を守るという彼らの役割を忘れてはいないし、救い主の最後の一人として称賛されることは、確かに[Root.Monarch.GetName]に恩恵がある。それにもかかわらず、[Root.Monarch.GetHerHim]を王と呼ぶことは、たとえそれが説教の文脈の中であっても、共和国の制度を弱体化させる危険性がある。"
+ dutch_republic.5.db:0 "最近、[Root.GetName]で[Root.Monarch.Dynasty.GetName]家は支持者の増加に恵まれている。その結果、彼らの支持者はより大胆になった。教会内の人々は、古代の聖書の王たちになぞらえて、王家の表現で[Root.GetName]公について語る。我々の国民は、自国の主権を守るという彼らの役割を忘れてはいないし、救い主の最後の一人として称賛されることは、確かに[Root.Monarch.GetName]に恩恵がある。それにもかかわらず、[Root.Monarch.GetHerHim]を王と呼ぶことは、たとえそれが説教の文脈の中であっても、共和国の制度を弱体化させる危険性がある。"
  dutch_republic.6.da:0 "[Root.Monarch.GetTitle]の地位と[Root.GetName]の支配権を保持しているにもかかわらず、オラニエ派の影響力は近年わずかに減少した。一族と連携して権力を求めてきた貴族たちは、それらの遺産にもかかわらず、共和国の官僚制と政治環境が、依然としてオラニエ家のなすがままになっているという兆候を見ることがますます増えている。\n\n我々の軍隊の主力を形成している人たちの中には、[Root.Monarch.GetName]が軍事問題でより明確に権能を主張することを約束するよう要求する者もいる。彼らの提案はどれも建設的な目的にあまり貢献するものではないが、古い衛兵に感銘を与えるかもしれない。"
  dutch_republic.6.db:0 "[Root.Monarch.GetTitle]の地位と[Root.GetName]の支配権を保持しているにもかかわらず、君主派の影響力は近年わずかに減少した。一族と連携して権力を求めてきた貴族たちは、それらの遺産にもかかわらず、共和国の官僚制と政治環境が、依然として[Root.Monarch.Dynasty.GetName]家のなすがままになっているという兆候を見ることがますます増えている。\n\n我々の軍隊の主力を形成している人たちの中には、[Root.Monarch.GetName]が軍事問題でより明確に権能を主張することを約束するよう要求する者もいる。彼らの提案はどれも建設的な目的にあまり貢献するものではないが、古い衛兵に感銘を与えるかもしれない。"
  dutch_republic.7.da:0 "オラニエ家が[Root.Monarch.GetTitle]の官職を独占しているにもかかわらず、[Root.GetName]では最近、共和制の理念の傾向が見られている。議会派たちはこれを、我が国が本格的な共和制の目標に向かって進んでいるかもしれない兆候と見ており、この移行を許可したオラニエ公を賞賛している人もいる。これがどれだけ真実であろうと、とにかく我々の最近の政治工作はオランダ共和国の夢を生かしている。"
@@ -545,8 +545,8 @@
  dutch_republic.14.da:0 "議会派の支配者は[Root.GetName]の制度においてより多くの代表権を得ることに成功したが、最近の変化に抵抗した機関の一つが陸軍であった。我々の将軍の一人は、オラニエ家との強い結びつきを持っている貴族の一族に属しており、軍の高い階級からオラニエの支持者を追放する我々の努力を妨害している。\n\n今、彼はさらに先を行き、オラニエ派である彼の親族の一人が[Root.Monarch.GetTitle]の顧問として働くことを望んでいる。この若い人物は有能な司令官のように見えるが、我々は彼らに影響力を与えることを嫌うだろう。"
  dutch_republic.14.db:2 "議会派の支配者は[Root.GetName]の制度においてより多くの代表権を得ることに成功したが、最近の変化に抵抗した機関の一つが陸軍であった。我々の将軍の一人は、[Root.Monarch.GetName]家との強い結びつきを持っている貴族の一族に属しており、軍の高い階級から[Root.Monarch.GetName]の支持者を追放する我々の努力を妨害している。\n\n今、彼はさらに先を行き、君主派である彼の親族の一人が[Root.Monarch.GetTitle]の顧問として働くことを望んでいる。この若い人物は有能な司令官のように見えるが、我々は彼らに影響力を与えることを嫌うだろう。"
  dutch_republic.15.t:1 "貴族は[Root.GetName]公に期待する"
- dutch_republic.15.da:0 "世襲の権力の美徳への信念は、自身が権力を継承している人々の間で強い傾向がある。[Root.GetName]の地元の貴族は、そのようなつながりを考えず、オラニエ家の権力が国家の統一と安定への重要性に根ざしたものとして見られるようになるよう主張している。\n\n我々が達成しようとしているものを信じない人々を統治することは容易ではない。時には、直接の衝突を避けることはできない。時には避けることもできるが、相当な代償が必要だ。"
- dutch_republic.15.db:0 "世襲の権力の美徳への信念は、自身が権力を継承している人々の間で強い傾向がある。[Root.GetName]の地元の貴族は、そのようなつながりを考えず、[Root.Monarch.Dynasty.GetName]家の権力が国家の統一と安定への重要性に根ざしたものとして見られるようになるよう主張している。\n\n我々が達成しようとしているものを信じない人々を統治することは容易ではない。時には、直接の衝突を避けることはできない。時には避けることもできるが、相当な代償が必要だ。"
+ dutch_republic.15.da:0 "自身が権力を継承している人々の間では、世襲権力の美徳に対する信念が強くなる傾向がある。[Root.GetName]の地元の貴族はそのような関係を考えず、オラニエ家が権力を握ろうとするのは、国家の統一と安定を願うからだと主張している。\n\n我々が達成しようとしているものを信じない人々を統治することは容易ではない。時には、直接の衝突を避けることはできない。時には避けることもできるが、相当な代償が必要だ。"
+ dutch_republic.15.db:0 "自身が権力を継承している人々の間では、世襲権力の美徳に対する信念が強くなる傾向がある。[Root.GetName]の地元の貴族はそのような関係を考えず、[Root.Monarch.Dynasty.GetName]家が権力を握ろうとするのは、国家の統一と安定を願うからだと主張している。\n\n我々が達成しようとしているものを信じない人々を統治することは容易ではない。時には、直接の衝突を避けることはできない。時には避けることもできるが、相当な代償が必要だ。"
  dutch_republic.15.a:1 "彼らは他と同様[Root.GetName]の臣民だ！"
  dutch_republic.16.t:1 "[Root.GovernmentName]の成功"
  dutch_republic.17.da:0 "近年、オラニエ派に対する支持が高まったことで、我々の共和国が他の国々にどのように見られているかについての議論が始まった。弱い君主を持つ国は、容易な獲物とみなされ、敬意を表する価値はない。これは、君主のない国家にとって何を意味するだろうか？\n\nオラニエ派はこの答えを持っていると主張する。我が国が国際的な舞台で競争相手となるためには、[Root.Monarch.GetTitle]が[Root.Monarch.GetHerHis]の統一と支配の能力を示す必要がある。無益な権力の誇示は通常は無駄であると考えられるが、おそらく今は必要になるだろう。"
