--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -890,7 +890,7 @@
  buk_the_tower_of_death:0 "死の塔"
  buk_the_tower_of_death_desc:0 "ポイカラーンモスクのミナレットは、その堂々とした佇まいから、チンギス・ハンによって原型のモスクが受けたような破壊を免れた。周囲には新しいモスクが建てられたが、処刑の道具として利用されていたため、死の塔として知られるようになった。現在では、主に礼拝の呼びかけに使われ、時には近くの城塞の見張り台にもなっているが、ハンの揺るぎなき正義を常に想起させる塔としても機能している。"
  buk_sahih_al-bukhari:0 "サヒーフ・アル＝ブハーリー"
- buk_sahih_al-bukhari_desc:0 "著名な学者であり法学者でもあるイマーム、ムハンマド・アル・ブハーリーによって編纂されたそれは、預言者ムハンマドとその仲間の言行録であるハディース集の内、最も権威ある写本のひとつと考えられ、、イスラム法の基礎としての役割を果たした。イマームと彼の著作は、ハンバル派を筆頭に様々なマズハブによって主張されてきたが、真に主張できるのはブハラだけである。"
+ buk_sahih_al-bukhari_desc:0 "著名な学者であり法学者でもあるイマーム、ムハンマド・アル・ブハーリーによって編纂されたそれは、預言者ムハンマドとその仲間の言行録であるハディース集の内、最も権威ある写本のひとつと考えられ、イスラム法の基礎としての役割を果たした。イマームと彼の著作は、ハンバル派を筆頭に様々なマズハブによって主張されてきたが、真に主張できるのはブハラだけである。"
  trading_city_ideas:0 "交易都市のアイデア"
  trading_city_ideas_start:0 "交易都市の伝統"
  trading_city_ideas_bonus:0 "交易都市の宿願"
@@ -3271,7 +3271,7 @@
  democratic_values_reform:0 "能力主義による支配"
  democratic_values_reform_desc:0 "わが共和国は、寡頭政治家のコネや影響力に基づいて支配者を選出することはない。その代わり、大衆は候補者がもたらすことのできる能力に従って投票する。この能力主義のシステムは、男女の区別なく、我々の社会のあらゆる側面に存在している。"
  aristocratic_values_reform:0 "ポリティアの美徳"
- aristocratic_values_reform_desc:0 "オリガルヒは大衆がオリガルヒに権限を付与せねば統治できず、大衆は自身が望むものを決定できない。共和制の維持には、支配側と同様に単なる人たちの価値観も守らなければならない。"
+ aristocratic_values_reform_desc:0 "オリガルヒは大衆がオリガルヒに権限を付与せねば統治できず、大衆は自身が望むものを決定できない。共和制の維持には、支配側と同様に庶民の価値観も守らなければならない。"
  mechanic_reelection_depowers_estates_yes:1 "再選すると階級の影響度が§Y10%§!低下します"
  REELCTION_DEPOWER_ESTATES:0 "同じ統治者の再選"
  force_reelection_reform:0 "再選挙権の法制化"
