--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -95,7 +95,7 @@
  women_history_events.23.b:0 "彼女を将軍にしよう。"
  women_history_events.23.c:0 "今まで通り歌を歌わせていればいい。"
  women_history_events.24.t:0 "アン・ブーリン"
- women_history_events.24.d:0 "カトリック教会の打破は、アン・ブーリンと結婚したいとのヘンリー8世の願望と、教皇がキャサリン王妃との以前の結婚の取り消しを拒否したことから始まった。アンは王の愛人となることを拒否し、彼女が彼の抱擁に身を委ねる唯一の方法は彼が彼女と結婚した場合だと彼に告げた。イングランドの宗教改革の指導者であり、カンタベリー大司教であったトマス・クランマーは、ヘンリーとキャサリンの結婚を無効と宣言し、その後、ヘンリーとアンの結婚が正当で有効であると宣言した。教皇はすぐにヘンリーとクランマーに対して破門を宣告した。この結果、イングランド教会とローマ教会の間に分裂がもたらされ、イングランド教会は王の支配下に置かれた。アンはすぐに妊娠し、将来の女王エリザベス1世が1533年9月7日に誕生した。子供の性別、そしてそれに続く3つの流産に失望し、ヘンリーはジェーン・シーモアに求愛し始めた。彼の妻を取り除くために、国王ヘンリー8世は、姦通と近親相姦と魔術を用いた罪でアンを起訴して、ロンドン塔に送り、彼女はそこで裁判を待っている。"
+ women_history_events.24.d:0 "カトリック教会の崩壊は、アン・ブーリンと結婚したいとのヘンリー8世の願望と、教皇がキャサリン王妃との以前の結婚の無効を拒否したことから始まった。アンは王の愛人となることを拒否し、彼女が彼の抱擁に身を委ねる唯一の方法は彼が彼女と結婚した場合だと彼に告げた。イングランドの宗教改革の指導者であり、カンタベリー大司教であったトマス・クランマーは、ヘンリーとキャサリンの結婚を無効と宣言し、その後、ヘンリーとアンの結婚が正当で有効であると宣言した。教皇はすぐにヘンリーとクランマーに対して破門を宣告した。この結果、イングランド教会とローマ教会の間に分裂がもたらされ、イングランド教会は王の支配下に置かれた。アンはすぐに妊娠し、将来の女王エリザベス1世が1533年9月7日に誕生した。子供の性別、そしてそれに続く3度の流産に失望し、ヘンリーはジェーン・シーモアに求愛し始めた。妻を追い出すために、国王ヘンリー8世はアンを姦通、近親相姦、魔術を用いた罪で起訴し、ロンドン塔に送り、彼女はそこで裁判を待っている。"
  women_history_events.24.a:0 "彼女を助けよう。そして顧問にするのだ。"
  women_history_events.24.b:0 "アンは過去の懐かしい記憶となるだろう。"
  women_history_events.25.t:0 "シッティ・ウォン・ケンバン"
@@ -104,7 +104,7 @@
  women_history_events.25.b:0 "将軍よ、私に敬礼せよ！"
  women_history_events.25.c:0 "おかしなことだ。"
  women_history_events.26.t:0 "キャサリン・オブ・アラゴン"
- women_history_events.26.d:0 "キャサリン・オブ・アラゴンはヨーロッパ史で初めての女性外交官で、駐英スペイン大使を務めた。イングランドは簡単に彼女を操作できるだろうと考えていたが、これは間違いであった。ヘンリー8世と結婚した彼女は、6ヶ月間イングランドの摂政を務めたが、その間に彼女はフロドゥンの戦いにおいて重要な役割を果たした。キャサリンはフアン・ルイス・ビベスによる『キリスト教女性の教育』という本を委託した教育を受けた女性であり、貧困層への慈善事業の計画で非常に愛された。彼女はルネサンス人文主義の擁護者であり、偉大な学者であるロッテルダムのエラスムスとトーマス・モアの友人であった。生き残っているのは娘のメアリー1人だけであり、キャサリンが息子を産んでいないことで、ヘンリー8世は、彼の結婚を破棄しようと試み、イングランドとローマ教会との分裂が始まった。彼女が宮廷に留まることが許されていれば、知的な女性はより良いことを行うことができたであろう。"
+ women_history_events.26.d:0 "キャサリン・オブ・アラゴンはヨーロッパ史で初めての女性外交官で、駐英スペイン大使を務めた。イングランドは簡単に彼女を操れるだろうと考えていたが、これは間違いであった。ヘンリー8世と結婚した彼女は、6ヶ月間イングランドの摂政を務めたが、その間に彼女はフロドゥンの戦いにおいて重要な役割を果たした。キャサリンは聡明な女性であり、フアン・ルイス・ビベスによる『キリスト教女性の教育』という本を依頼し、貧困層への慈善事業の計画で非常に愛された。彼女はルネサンス人文主義の擁護者であり、偉大な学者であるロッテルダムのエラスムスとトーマス・モアの友人でもあった。幼少期を生き延びたのは娘のメアリー1人だけであり、キャサリンが息子を産んでいないことから、ヘンリー8世は婚姻を無効にしようとして、イングランドとローマの教会の分裂が始まった。彼女は聡明な女性であり、宮廷に留まることが許されていれば、我が王国にもっと有益があっただろう。"
  women_history_events.26.a:0 "彼女に顧問の席を与えよう。"
  women_history_events.26.b:0 "宮廷から追い出せ！"
  women_history_events.27.t:0 "マーガレット・オブ・アンジュー"
