--- a/source/localisation/ledger_l_english.yml
+++ b/source/localisation/ledger_l_english.yml
@@ -199,7 +199,7 @@
  LEDGER_GREAT_POWERS:0 "列強"
  LEDGER_GREAT_POWER_RANK:0 "順位"
  LEDGER_GREAT_POWER_SCORE:0 "列強評価"
- LEDGER_GREAT_POWER_RANK_DETERMINED_BY:0 "列強の評価値が最も高い国はより高い階級となる"
+ LEDGER_GREAT_POWER_RANK_DETERMINED_BY:0 "列強の評価値が高い国ほど順位が高くなります"
  LEDGER_GREAT_POWER_SCORE_DETERMINED_BY:1 "列強の評価値は開発度に制度ペナルティによる補正をかけたものとなります"
  OWN_DEVELOPMENT:0 "自国開発度：$VAL|Y$\n"
  HALF_OF_SUBJECTS_DEVELOPMENT:0 "従属国の開発度の半分：$VAL|Y$\n"
