--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -81,7 +81,7 @@
  flavor_fra.EVTOPTA110:0 "共和国は生き残る！"
  flavor_fra.EVTDESC111:1 "終わりなき戦争は[Root.GetName]の人口を使い果たした。革命を支持した人々は、一般大衆に壊滅的な影響を及ぼし続けている絶え間ない戦争状態に身をさらすのではなく、彼らの立場を改善するよう努力するべきだと不平を言う。その結果、多くの人々が共和国への信仰を失っている。"
  flavor_fra.EVTDESC112:0 "政府の変更は、財務管理上の不始末を増やしただけに思われます。[Root.GetName]共和国が破産を宣告して以来、多くの元支持者たちは、革命以前と比べて良くなったことがあるかどうか自問自答しています…"
- flavor_fra.EVTDESC113:1 "国家債務は国民にとって大きな問題だ。国の財政は政府の変更前よりも良い形にはなっていないようで、多くの人々は費用のかかる破産や増税を恐れている。共和国への信仰は弱まり、多くの人が古い君主主義のやり方に戻っている。"
+ flavor_fra.EVTDESC113:1 "国家債務は国民の注視する問題だ。国家財政は政体変更前よりも良くはなっていないようで、国民の多くは費用のかかる破産や増税を恐れている。共和国への信仰は弱まりつつあり、多くが古い君主主義の道へと回帰しつつある。"
  flavor_fra.EVTDESC114:1 "革命は動きを止めてしまったようだ。国の4分の1以上に反乱が広がっているため、共和党政府が我が国の問題に対する答えを持っていると信じている人はほとんどいない。"
  flavor_fra.EVTDESC115:1 "革命及び共和国化が[Root.GetName]の不安定性に対する解答となると思っていた人たちはますます幻滅しています。自国を悩ますとめどない混乱は国中に広まり、農民も上流階級も変わらず苦しみを引き起こしています。強力な指導者が支配権を奪い、混乱を終わらせることへの支持が高まっています。"
  flavor_fra.EVTDESC116:1 "国民の共和国に対する信頼は低下しています。国民は、旧体制が抱えていた問題を改善する努力をほとんどしていないと非難し、革命前の方が状況は良かったと訴えています。すでに反体制派は、私たちの方針を転換し、[Root.GetAdjective]の王位に君主を据えたいと思っている者たちの支持を集めています。"
