Save/Update files [ci skip]

--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -1818,7 +1818,7 @@
  select_grand_vizier_from_estate_all_tt:0 "§Y全ての§!階級から§Y大宰相§!を自国の顧問として雇用します。"
  unlock_holy_order_savafid_order_tt:1 "修道会§Yサファヴィー教団§!が解禁されます。"
  unlock_holy_order_zahediyeh_order_tt:0 "修道会§Yザーヒド教団§!が解禁されます。"
- improve_elevation_effect_tt:0 "外交行動「§Y影響国の昇格§!」は現在、対象国と[Root.GetName]間で歴史的友好を生み出します。"
+ improve_elevation_effect_tt:0 "外交行動「§Y影響国の昇格§!」は、対象国と[Root.GetName]間で歴史的友好を生み出すようになります。"
  improve_elevation_reduction_tt:0 "§Yペルシアの影響力§!の能力により、影響国の昇格コストが最大§G-400§!まで軽減されます。"
  improve_persian_influence_abilities_tt:0 "能力§Yペルシアの影響力§!の効果を§G+100.0%§!させます。"
  enable_great_holy_war_cb_tt:0 "開戦事由§Y大聖戦§!が利用可能になります。"
@@ -2368,7 +2368,7 @@
  flavor_per.55.desc:0 "自国の宗教的分裂はついに終わるだろう。シーア派は[Root.GetName]内で無視できない影響力を持つ勢力ですが、[Root.Monarch.GetName]は十二イマーム派を国教として採用することで外交的孤立を招きかねないことを自覚しています。その代わり、自国民の団結は、スンナ派の信仰を通じたムスリム世界との団結に等しいです。当然のことながら、偉大な共同体に対して彼の立場を明確にするために、[Root.GetName]の異端は標的にされ、真の信仰に戻されるでしょう。"
  flavor_per.55.a:0 "我々は偉大な共同体の一員なのだ。"
  flavor_per.56.t:0 "ティムール朝の終焉"
- flavor_per.56.d:0 "何世紀にもわたる征服、最高級の芸術の後援、ティムール自身による強権支配は、彼の下等家系の存続を保証するには十分ではありませんでした。軍隊をはるかルーシーの扉まで導いた征服や、広大な帝国を印象的な優雅さで支配した統治や、芸術家、詩人、建築家に資金を提供した芸術の後援や、あらゆる国政問題で優秀であったにもかかわらず、彼の後継者たちは誰も、この偉大な人物の輝きの火種すら持っていませんでした。その結果、彼の系譜は、祖国の最後の残党が我々の壮大な軍隊の前に崩れ去るという形で終焉を迎えたのです。かつてホラーサーンとティムール朝の支配下にあった人々にとって新たな日が始まる！"
+ flavor_per.56.d:0 "何世紀にもわたる征服、最高級の芸術の後援、ティムール自身による強権支配は、彼の下等家系の存続を保証するには十分ではありませんでした。軍隊をはるかルーシの扉まで導いた征服や、広大な帝国を印象的な優雅さで支配した統治や、芸術家、詩人、建築家に資金を提供した芸術の後援や、あらゆる国政問題で優秀であったにもかかわらず、彼の後継者たちは誰も、この偉大な人物の輝きの火種すら持っていませんでした。その結果、彼の系譜は、祖国の最後の残党が我々の壮大な軍隊の前に崩れ去るという形で終焉を迎えたのです。かつてホラーサーンとティムール朝の支配下にあった人々にとって新たな日が始まる！"
  flavor_per.56.a:0 "[Root.GetDynastyOrFallback][Root.GovernmentName]万歳！"
  flavor_per.56.a.tt:0 "§Y5§!つの§Yホラーサーン§!地方の州は開発度がランダムに§G+1§!増加します。"
  flavor_per.57.t:0 "[target_province.GetName]の預言者"
@@ -2491,7 +2491,7 @@
  zoroastrian_center_of_reformation:0 "改宗の中心地"
  per_consolidate_persia_title:0 "ペルシアの統合"
  per_consolidate_persia_desc:0 "サッファール朝最後の日以来、ペルシア地方は常に外国の手にあった。トルコ人やモンゴル人がペルシアの政治性を支配してきた。\nこれらの侵略者を倒してペルシアを統一し、自国の旗下に統一する時が来た。"
- per_consolidate_persia_tt:0 "開発度が§G32§!ある§Yペルシア§!内の複数の州で、政府改革進捗度§G15§!を獲得します。"
+ per_consolidate_persia_tt:0 "§Yペルシア§!内の複数の州で開発度を合計§G32§!獲得し、政府改革進捗度§G15§!を入手します。"
  per_butcher_black_sheep_title:0 "黒い羊の討伐"
  per_butcher_black_sheep_desc:0 "ティムール朝はペルシアの支配勢力であり、未だに自国の悩みの種であるが、テュルク部族の黒羊朝も侮ってはいけない敵だ。彼らの戦力と戦闘経験は、ペルシアを狙う手強い敵だ。先手を打って、黒い羊が侵攻してくる前に排除せねばならない。"
  per_butcher_black_sheep_at:0 "§Y[QAR.GetName]§!を§Yペルシア§!および§Yコーカサス§!から追い出す、もしくは§Y[QAR.GetName]§!を従属させる場合："
